Fixed issues found in testing
Added the correct sort images. Fixed issue where the select all columns image
didn't align with the filte iscons. Removed import statement that broke build.
Added code to allow the data grid to be indented. Fixed action bar height.
Fixed pager styling that had to change because of action bar height change.
Fixed text filter apply buuton down style.

issue #27

--- a/src/org/ssgwt/client/ui/datagrid/SSDataGridStyle.css
+++ b/src/org/ssgwt/client/ui/datagrid/SSDataGridStyle.css
@@ -118,7 +118,7 @@
 /*Styling for the first child inside the second dif in the a header */
 .dataGridHeader > div > div:first-child {
     left: 40px !Important;
-    right: 0px;
+    right: 5px;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
