--- a/src/org/ssgwt/client/ui/datagrid/SimplePager.css
+++ b/src/org/ssgwt/client/ui/datagrid/SimplePager.css
@@ -1,21 +1,42 @@
+/*
+ * Copyright 2011 Google Inc.
+ * 
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not
+ * use this file except in compliance with the License. You may obtain a copy of
+ * the License at
+ * 
+ * http://www.apache.org/licenses/LICENSE-2.0
+ * 
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+ * License for the specific language governing permissions and limitations under
+ * the License.
+ */
+
 .pageDetails {
-  padding: 4px 8px;
-  text-align: center;
+    padding: 2px 8px;
+    text-align: left;
+    font-family: "PT Sans", sans-serif;
+    font-size: 11px;
+    color: #41485A;
 }
 
 .button {
-  padding: 4px 1px 4px 1px;
-  cursor: pointer;
-  cursor: hand;
+    padding: 3px 1px 0px 1px;
+    cursor: pointer;
+    cursor: hand;
+    width: 15px;
 }
 
 .disabledButton {
-  cursor: default;   
+    cursor: default;   
 }
 
 .framedLayout {
-	min-width: 60px;
-	padding: 5px;
-	box-sizing: border-box;
-	border: thin solid #BDBFC5;
+    text-align: center;
+    min-width: 60px;
+    padding: 3px;
+    box-sizing: border-box;
+    border: thin solid #BDBFC5;
 }
